--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -8106,14 +8106,8 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
  */
 .markdownBody a.has-annotation,
 .markdownBody a.has-annotation-partial {
-    --link-underline-background-image: var(--GW-dotted-underline-background-image);
-
-    background-image: var(--link-underline-background-image);
+	background-image: linear-gradient(to right, var(--link-underline-gradient-line-color) 50%, var(--link-underline-background-color) 50%);
     background-size: 2px 1px;
-}
-.markdownBody a.has-annotation:hover,
-.markdownBody a.has-annotation-partial:hover {
-    --link-underline-background-image: var(--GW-dotted-underline-hover-background-image);
 }
 .markdownBody a.has-annotation.decorate-not {
     background-image: none;
@@ -8121,15 +8115,6 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 /*  Reversed link colors.
  */
-.markdownBody .colors-invert a.has-annotation,
-.markdownBody .colors-invert a.has-annotation-partial {
-    --link-underline-background-image: var(--GW-dotted-underline-inverted-background-image);
-}
-.markdownBody .colors-invert a.has-annotation:hover,
-.markdownBody .colors-invert a.has-annotation-partial:hover {
-    --link-underline-background-image: var(--GW-dotted-underline-inverted-hover-background-image);
-}
-
 .markdownBody .colors-invert a[data-link-icon-type='svg'] .link-icon-hook::after {
     filter: invert(1);
 }
