--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2486,18 +2486,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5591,7 +5591,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5772,7 +5772,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6220,7 +6220,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7173,7 +7173,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#question');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7383,7 +7383,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -7765,7 +7765,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1730840641#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1730903408#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7844,7 +7844,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1730840641#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1730903408#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -8106,14 +8106,8 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
  */
 .markdownBody a.has-annotation,
 .markdownBody a.has-annotation-partial {
-    --link-underline-background-image: var(--GW-dotted-underline-background-image);
-
-    background-image: var(--link-underline-background-image);
+	background-image: linear-gradient(to right, var(--link-underline-gradient-line-color) 50%, var(--link-underline-background-color) 50%);
     background-size: 2px 1px;
-}
-.markdownBody a.has-annotation:hover,
-.markdownBody a.has-annotation-partial:hover {
-    --link-underline-background-image: var(--GW-dotted-underline-hover-background-image);
 }
 .markdownBody a.has-annotation.decorate-not {
     background-image: none;
@@ -8121,15 +8115,6 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 /*  Reversed link colors.
  */
-.markdownBody .colors-invert a.has-annotation,
-.markdownBody .colors-invert a.has-annotation-partial {
-    --link-underline-background-image: var(--GW-dotted-underline-inverted-background-image);
-}
-.markdownBody .colors-invert a.has-annotation:hover,
-.markdownBody .colors-invert a.has-annotation-partial:hover {
-    --link-underline-background-image: var(--GW-dotted-underline-inverted-hover-background-image);
-}
-
 .markdownBody .colors-invert a[data-link-icon-type='svg'] .link-icon-hook::after {
     filter: invert(1);
 }
