--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2482,18 +2482,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5583,7 +5583,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5764,7 +5764,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6212,7 +6212,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7165,7 +7165,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#question');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7375,7 +7375,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -7704,6 +7704,13 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     display: block;
     color: var(--GW-page-toolbar-button-selected-icon-color);
 }
+#gcse-search a .icon {
+	padding: 5px;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	box-sizing: border-box;
+}
 #gcse-search a svg {
     display: block;
 }
@@ -7757,7 +7764,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1731124101#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1731466932#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7836,7 +7843,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1731124101#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1731466932#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
