--- a/css/default.css
+++ b/css/default.css
@@ -5444,11 +5444,10 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 #page-toolbar.vertical .widget button,
 #page-toolbar.vertical .widget a {
     position: relative;
-}
-#page-toolbar.vertical .widget button {
     height: var(--toolbar-button-size);
 }
-#page-toolbar.vertical .widget button .icon {
+#page-toolbar.vertical .widget button .icon,
+#page-toolbar.vertical .widget a .icon {
     padding: 4px;
 }
 #page-toolbar.vertical .widget button .label,
@@ -6554,18 +6553,18 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /* SEARCH WIDGET */
 /*****************/
 
-#gcse-search a {
+#page-toolbar #gcse-search a {
     display: block;
     color: var(--GW-page-toolbar-button-selected-icon-color);
 }
-#gcse-search a .icon {
+#page-toolbar #gcse-search a .icon {
 	padding: 5px;
 	width: 100%;
 	height: 100%;
 	display: flex;
 	box-sizing: border-box;
 }
-#gcse-search a svg {
+#page-toolbar #gcse-search a svg {
     display: block;
 }
 
