--- a/template/default.html
+++ b/template/default.html
@@ -102,10 +102,10 @@
           <svg class="logo-image" viewBox="0 0 64 75"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div class="sidebar-links">
-        <a class="link-page link-annotated" href="/about"                title="Site ideals, source, content, traffic, examples, license" rel="author"><span class="mobile-not">About </span>Site</a>
-        <a class="link-page link-annotated" href="/me"                   title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author"><span class="mobile-not">About </span>Me</a>
-        <a class="new   link-page link-annotated" href="/changelog"            title="Changelog of what's new or updated">New Essays</a>
-        <a class="link-page"   href="/doc/newest/index"     title="Most recent link annotations">New Links</a>
+        <a class="site   link-page link-annotated" href="/about"                title="Site ideals, source, content, traffic, examples, license" rel="author"><span class="mobile-not">About </span>Site</a>
+        <a class="me   link-page link-annotated" href="/me"                   title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author"><span class="mobile-not">About </span>Me</a>
+        <a class="new-essays   link-page link-annotated" href="/changelog"            title="Changelog of what’s new or updated">New Essays</a>
+        <a class="new-links   link-page"   href="/doc/newest/index"     title="Most recent link annotations">New Links</a>
         <a class="patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">Patreon</a>
         </div>
       </nav>
