--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -54,7 +54,7 @@
 
     /*  Collapse blocks.
         */
-	--GW-abstract-collapse-blockquote-hover-color: #eee;
+	--GW-collapse-abstract-blockquote-hover-color: #eee;
 	--GW-collapse-disclosure-button-color: #eee;
 	--GW-collapse-disclosure-button-hover-color: #ddd;
 	--GW-collapse-in-blockquote-disclosure-button-color: #ddd;
@@ -63,6 +63,9 @@
 	--GW-collapse-disclosure-button-text-hover-color: #fff;
 	--GW-collapse-in-blockquote-disclosure-button-text-color: #999;
 	--GW-collapse-in-blockquote-disclosure-button-text-hover-color: #888;
+
+	/*	Inline collapses.
+	 */
 	--GW-collapse-inline-disclosure-button-text-color: #555;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #999;
 
@@ -392,7 +395,7 @@
 
     /*  Collapse blocks.
         */
-	--GW-abstract-collapse-blockquote-hover-color: #333;
+	--GW-collapse-abstract-blockquote-hover-color: #333;
 	--GW-collapse-disclosure-button-color: #333;
 	--GW-collapse-disclosure-button-hover-color: #494949;
 	--GW-collapse-in-blockquote-disclosure-button-color: #494949;
@@ -401,6 +404,9 @@
 	--GW-collapse-disclosure-button-text-hover-color: #000;
 	--GW-collapse-in-blockquote-disclosure-button-text-color: #8b8b8b;
 	--GW-collapse-in-blockquote-disclosure-button-text-hover-color: #999;
+
+	/*	Inline collapses.
+	 */
 	--GW-collapse-inline-disclosure-button-text-color: #c1c1c1;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #8b8b8b;
 
@@ -971,6 +977,6 @@ a[data-link-icon-color]:hover .link-icon-hook::after {
     background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1731914541">
-<script src="/static/js/head.js?v=1731975424"></script>
-<link rel="preload" href="/static/img/icon/icons.svg?v=1731975423" as="image">
+<link rel="stylesheet" href="/static/css/head.css?v=1732032794">
+<script src="/static/js/head.js?v=1732032794"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1731975444" as="image">
