--- a/include/inlined-standalone.html
+++ b/include/inlined-standalone.html
@@ -54,7 +54,7 @@
 
     /*  Collapse blocks.
         */
-	--GW-abstract-collapse-blockquote-hover-color: #eee;
+	--GW-collapse-abstract-blockquote-hover-color: #eee;
 	--GW-collapse-disclosure-button-color: #eee;
 	--GW-collapse-disclosure-button-hover-color: #ddd;
 	--GW-collapse-in-blockquote-disclosure-button-color: #ddd;
@@ -63,6 +63,9 @@
 	--GW-collapse-disclosure-button-text-hover-color: #fff;
 	--GW-collapse-in-blockquote-disclosure-button-text-color: #999;
 	--GW-collapse-in-blockquote-disclosure-button-text-hover-color: #888;
+
+	/*	Inline collapses.
+	 */
 	--GW-collapse-inline-disclosure-button-text-color: #555;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #999;
 
@@ -336,5 +339,5 @@
 	--GW-checkerboard-scrollbar-hover-background-image: var(--GW-image-checkerboard-000-fff-2x-gif);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1731913176">
-<link rel="stylesheet" href="/static/css/style.css?v=1731913176">
+<link rel="stylesheet" href="/static/css/head.css?v=1732032794">
+<link rel="stylesheet" href="/static/css/style.css?v=1732032794">
